--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "astro": "^2.3.1",
+    "chart.js": "^4.2.1",
     "daisyui": "^2.51.6",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
   }
 }
