--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^2.1.1",
     "@astrojs/tailwind": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "astro": "^2.3.1",
