add env to actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,6 +26,11 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    env:
+      GUAC_URL: ${{secrets.GUAC_URL}}
+      GUAC_PASS: ${{secrets.GUAC_PASS}}
+      GUAC_USER: ${{secrets.GUAC_USER}}
+      GUAC_MONTHS: ${{secrets.GUAC_MONTHS}}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
