--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
+    "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
-    "astro": "^2.3.1",
+    "astro": "^2.5.5",
     "chart.js": "^4.2.1",
+    "d3": "^7.8.4",
+    "d3-cloud": "^1.2.5",
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "svelte": "^3.59.1",
     "tailwindcss": "^3.3.2"
   }
 }
