--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "pretty": "npx prettier --write src/"
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
@@ -26,5 +27,8 @@
     "react-dom": "^18.2.0",
     "svelte": "^3.59.1",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8"
   }
 }
