--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "svelte": "^3.59.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "daisyui": "^2.51.6"
   },
   "devDependencies": {
-    "daisyui": "^3.5.0",
     "prettier": "2.8.8"
   }
 }
