--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^2.1.1",
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/ts-plugin": "^1.3.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
