--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "pretty": "npx prettier --write src/"
+    "pretty": "npx prettier --write src/",
+    "gen-resume-pdf": "npx md-to-pdf src/pages/work/resume.md && mv src/pages/work/resume.pdf public/work/resume.pdf"
   },
   "dependencies": {
     "@astrojs/react": "^3.0.4",
