fix pdf options for resume

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "pretty": "npx prettier --write src/",
-    "move-resume-pdf": "mv src/pages/work/resume.pdf public/work/resume.pdf",
-    "gen-resume-pdf": "npx md-to-pdf --stylesheet src/assets/styles/resume.css src/pages/work/resume.md && npm run move-resume-pdf"
+    "gen-resume-pdf": "npx md-to-pdf --pdf-options '{ \"format\": \"Letter\", \"margin\": \"20mm\", \"printBackground\": true }' --stylesheet src/assets/styles/resume.css src/pages/work/resume.md && npm run move-resume-pdf",
+    "move-resume-pdf": "mv src/pages/work/resume.pdf public/work/resume.pdf"
   },
   "dependencies": {
     "@astrojs/react": "^3.0.4",
