--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
     "svelte": "^3.59.1",
     "tailwindcss": "^3.3.2",
