--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
