--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^3.5.2",
     "chart.js": "^4.2.1",
     "daisyui": "^2.51.6",
+    "lucide-react": "^0.428.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-d3-cloud": "^1.0.6",
