--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "^3.3.2",
     "theme-change": "^2.5.0"
   },
